# Yandiansai

./: README.md  show.py
AnyNet/: try.py
terminal/: CMakeLists.txt  Makefile  circle.cpp  circle.h  main  main.cpp  stereoRectified.cpp  启动步骤.txt
标定圆检测/: get_data_from_cam.py  main.py  one_cam.py
标定圆检测/Circle/: circle.py
标定圆检测/point/: main.py  test.py
校正/: stereoRectified.cpp  stereoRectified.h
深度学习的物体检索方法/: main.py  model.py  train_test.py
深度学习的物体检索方法/data/: ImageLoader.py  dir_xy.py  get_data_from_cam.py
深度学习的物体检索方法/data/label/: test.json  train.json
颜色检测方法/: hsv_hist.py
